--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.12.1",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
@@ -24,6 +25,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^7.1.0",
+    "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-rollup": "^2.17.0",
     "gulp-sass": "^4.1.0",
