--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.2",
     "browser-sync": "^2.26.13",
+    "cssnano": "^4.1.10",
     "del": "^6.0.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
@@ -22,9 +24,9 @@
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^4.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^7.1.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-rollup": "^2.17.0",
@@ -34,6 +36,7 @@
     "imagemin-jpeg-recompress": "^7.0.0",
     "imagemin-pngquant": "^9.0.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.1.7",
     "rollup": "^2.33.1"
   },
   "scripts": {
